working on fonts

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v0.47.0/mapbox-gl.css' rel='stylesheet' />
     <link rel='stylesheet' href='%PUBLIC_URL%/style.css' />
+    <link href='https://fonts.googleapis.com/css?' family=M+PLUS+Rounded+1c|Sawarabi+Mincho rel='stylesheet'>
   </head>
   <body>
     <noscript>
